[package]
name = "pixels-ray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11", default_features = false }
bevy_pixels = { git = "https://github.com/hinohi/bevy_pixels.git", branch = "bevy-0.11" }
rand = "0.8"
ray-tracing = { git = "https://github.com/hinohi/rust-ray-tracing.git" }
